# finml-utils

./: PROJECT_START.md  README.md  dev.py  mkdocs.yml  pyproject.toml
.github/workflows/: ruff.yaml  tests.yaml
src/finml_utils/: __init__.py  backtest.py  columns.py  dataframes.py  decisiontree.py  list.py  parallel.py  piecewisetransformation.py  s3_store.py  shuffle.py  stats.py  vectors.py
src/finml_utils/models/: twodimensionalpiecewiselinear.py
tests/: test_correlations.py  test_dataframes.py  test_decisiontree.py  test_forward.py  test_main.py  test_models.py  test_returns.py  test_shuffle.py  test_splitters.py  test_stats.py  test_transformation.py  test_vectors.py
